--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="descprition" content="Cargo/Passenger Airline">
   <meta name="keywords" content="Cargo/Passenger Airline">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Cargo for Tonight Image</title>
 
 <!--ifIE>
