--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <meta name="descprition" content="Cargo/Passenger Airline">
   <meta name="keywords" content="Cargo/Passenger Airline">
   <meta name="viewport" content="width=device-width, initial-scale=1">
